# liar-logreg

./: .gitignore  README.md  flake.lock.license  flake.nix  main.py  pyproject.toml  requirements.txt
liar-logreg/: __main__.py
liar_logreg/: __init__.py  __main__.py  download.py
